--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,8 @@
 /***************Background Image Section************/
  
 body {
-background-image: url("/assets/images/logo3.jpg");
-background-repeat: none;
-background-size: 100%;
-overflow-wrap: scroll;
+font-family: "Roboto" , sans-serif;
+background-color: skyblue;
 }
 
 /***************Overlay Section************/
@@ -17,9 +15,12 @@ overflow-wrap: scroll;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgba(255, 240, 245, 0.9);
+  background-image:  url(/assets/images/overlay-lo.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.7s;
 }
 
 .overlay-content {
@@ -32,9 +33,9 @@ overflow-wrap: scroll;
 
 .overlay a {
   padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
+  text-shadow:  2px 2px #ff0000;
+  font-size: 50px;
+  color: #fafafa;
   display: block;
   transition: 0.3s;
 }
