--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Berkshire+Swash&family:200,300,400,500,600,700,800,900) | Roboto: 200,300,400,500,600,700,800,900);
 body {
+    color: #000;
     font-family: "Berkshire+Swash&family" 800, sans-serif;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
@@ -19,30 +20,77 @@ body {
 
 
 
-.navbar-custom { 
-    background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  * {box-sizing: border-box;}
+  
+
+
+
+/***************Background for header************/
+.header {
+  overflow: hidden;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: linear-gradient(45deg, skyblue, white, lavender)!important;
-  color: #000;
-  font-size: 35px;
-  
-} 
+  background-repeat: repeat!important;
+  width: auto;
+  position:relative;
+  box-shadow: 5px 5px 5px rgba(5, 5, 5, 0.5);
+  padding-bottom: 30px;
+}
 
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 30px;
+  line-height:20px;
+  border-radius: 4px;
+}
 
- a.nav-link {
-
-     color: #000;
-     text-shadow: rgb(177, 166, 166) 1px 0 10px;
-
- }   
-
-
-
-.logo {
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
   height: 100px;
   width: 100px;
+ padding-bottom: 20px;
 }
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a.active {
+  background-color: lightskyblue;
+  color: navy;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
+.logo {
+ 
+}
+
+
 
 /***************Carousel Section************/
 
@@ -72,6 +120,7 @@ font-weight: 900;
      font-weight: 500;
      font-size: 2.5em;
     text-align: center;
+    overflow-y: scroll;
 }
 
  .intro h1 {
@@ -98,22 +147,42 @@ div > p {
 
     /***************Products Section************/
      
-   * {
+  * {
   box-sizing: border-box;
 }
 
+
+
+/* Center website */
 .main {
-  max-width: 1000px;
+  max-width: 100%x;
   margin: auto;
 }
 
 h1 {
   font-size: 50px;
   word-break: break-all;
+  display: inline-table;
+}
+
+h4 {
+ padding: 0 0 0 0;
+ overflow-y: auto;
+ text-align: center;
+ position: relative;
+ display: inline-table;
+
+}
+
+p {
+    text-align: center;
+    position: absolute;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
 }
 
 .row {
-  margin: 10px -16px;
+  margin: 10px 10px;
 }
 
 /* Add padding BETWEEN each column */
@@ -127,6 +196,8 @@ h1 {
   float: left;
   width: 33.33%;
   display: none; /* Hide all elements by default */
+  height: 30%; 
+  
 }
 
 /* Clear floats after rows */ 
@@ -138,8 +209,19 @@ h1 {
 
 /* Content */
 .content {
-  background-color: white;
-  padding: 10px;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
+  padding: 5px 5px 5px 5px;
+  height: 250px;
+  object-fit: cover;
+}
+
+img {
+
+    object-fit: cover;
+    height: 100%;
 }
 
 /* The "show" class is added to the filtered elements */
@@ -156,11 +238,14 @@ h1 {
   cursor: pointer;
 }
 
-.btn:hover {
-  background-color: #ddd;
+.btn.hover {
+  background-color: navy;
+  color: white;
+  transition: 0.5s  ease-in-out;
+  
 }
 
 .btn.active {
-  background-color: #666;
-  color: white;
+  background-color: skyblue;
+  color: black;
 }
