--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Berkshire+Swash&family:200,300,400,500,600,700,800,900) | Roboto: 200,300,400,500,600,700,800,900);
+@import url(https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap);
 body {
     color: #000;
     font-family: "Berkshire+Swash&family" 800, sans-serif;
@@ -32,6 +32,7 @@ body {
   background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: linear-gradient(45deg, skyblue, white, lavender)!important;
+  opacity: 75%;
   background-repeat: repeat!important;
   width: auto;
   position:relative;
@@ -48,7 +49,6 @@ body {
   text-decoration: none;
   font-size: 30px;
   line-height:20px;
-  border-radius: 4px;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
@@ -59,20 +59,33 @@ body {
 }
 
 /* Change the background color on mouse-over */
-.header a:hover {
-  background-color: #ddd;
+.header-right a:hover {
+   background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
   color: black;
+  border-radius: 50%;
 }
 
 /* Style the active/current link*/
 .header a.active {
-  background-color: lightskyblue;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
   color: navy;
+  border-radius: 50%;
 }
 
 /* Float the link section to the right */
 .header-right {
   float: right;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
+ 
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@@ -81,10 +94,6 @@ body {
     float: none;
     display: block;
     text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
 }
 .logo {
  
@@ -108,10 +117,14 @@ body {
 
 /***************About Section************/
 
-  .main-heading {
-      font-family: "Berkshire Swash" , cursive;
-font-weight: 900;
-     text-emphasis: bold;
+  .main {
+      font-family: "Berkshire Swash" , cursive!important;
+
+}
+
+main h1 h2 {
+    font-family: "Berkshire Swash" , cursive;
+    text-align: center;
 }
  
  .intro {
@@ -120,18 +133,24 @@ font-weight: 900;
      font-weight: 500;
      font-size: 2.5em;
     text-align: center;
-    overflow-y: scroll;
+    
 }
 
- .intro h1 {
-
-     font-weight: 500;
-   
+ .div > h1 {
+font-family:"Berkshire Swash" , cursive;
+text-align: center;
  }
 
 div > p {
-  background-color: lightpink;
-  font-family: "Berkshire Swash" , cursive
+  
+  
+ }
+
+ .column img {
+
+     height: auto;
+     object-fit: cover;
+
  }
 
 
@@ -159,18 +178,25 @@ div > p {
   margin: auto;
 }
 
-h1 {
+ h1 {
   font-size: 50px;
+  text-align: center;
   word-break: break-all;
-  display: inline-table;
+   background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
 }
 
-h4 {
+ h4 {
  padding: 0 0 0 0;
  overflow-y: auto;
  text-align: center;
  position: relative;
- display: inline-table;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
 
 }
 
@@ -179,6 +205,10 @@ p {
     position: absolute;
     padding: 0 0 0 0;
     margin: 0 0 0 0;
+     background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
 }
 
 .row {
@@ -216,12 +246,13 @@ p {
   padding: 5px 5px 5px 5px;
   height: 250px;
   object-fit: cover;
+  display: table;
 }
 
-img {
-
-    object-fit: cover;
-    height: 100%;
+ img {
+    height:33vh!important;
+    object-fit: cover!important;
+    overflow: hidden!important;
 }
 
 /* The "show" class is added to the filtered elements */
@@ -230,6 +261,14 @@ img {
 }
 
 /* Style the buttons */
+
+#myBtnContainer {
+ background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
+  font-family: "Berkshire Swash" , cursive ;
+}
 .btn {
   border: none;
   outline: none;
