--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ body {
     float: none;
     display: block;
     text-align: left;
-}
+}}
 .logo {
  
 }
@@ -141,10 +141,6 @@ font-family:"Berkshire Swash" , cursive;
 text-align: center;
  }
 
-div > p {
-  
-  
- }
 
  .column img {
 
@@ -166,53 +162,23 @@ div > p {
 
     /***************Products Section************/
      
-  * {
+* {
   box-sizing: border-box;
 }
 
-
-
 /* Center website */
 .main {
-  max-width: 100%x;
+  max-width: 1000px;
   margin: auto;
 }
 
- h1 {
+h1 {
   font-size: 50px;
-  text-align: center;
   word-break: break-all;
-   background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: linear-gradient(45deg, skyblue, white, lavender)!important;
-}
-
- h4 {
- padding: 0 0 0 0;
- overflow-y: auto;
- text-align: center;
- position: relative;
-  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: linear-gradient(45deg, skyblue, white, lavender)!important;
-
-}
-
-p {
-    text-align: center;
-    position: absolute;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
-     background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: linear-gradient(45deg, skyblue, white, lavender)!important;
 }
 
 .row {
-  margin: 10px 10px;
+  margin: 10px -16px;
 }
 
 /* Add padding BETWEEN each column */
@@ -226,8 +192,13 @@ p {
   float: left;
   width: 33.33%;
   display: none; /* Hide all elements by default */
-  height: 30%; 
-  
+}
+
+.column img {
+
+    height: 80%;
+    object-fit: cover;
+    float: left;
 }
 
 /* Clear floats after rows */ 
@@ -243,16 +214,8 @@ p {
   background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
   background: linear-gradient(45deg, skyblue, white, lavender)!important;
-  padding: 5px 5px 5px 5px;
-  height: 250px;
-  object-fit: cover;
-  display: table;
-}
-
- img {
-    height:33vh!important;
-    object-fit: cover!important;
-    overflow: hidden!important;
+  padding: 10px;
+  height: 100%;
 }
 
 /* The "show" class is added to the filtered elements */
@@ -261,30 +224,30 @@ p {
 }
 
 /* Style the buttons */
-
-#myBtnContainer {
- background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
-  background: linear-gradient(45deg, skyblue, white, lavender)!important;
-  font-family: "Berkshire Swash" , cursive ;
-}
 .btn {
   border: none;
   outline: none;
   padding: 12px 16px;
-  background-color: white;
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
   cursor: pointer;
 }
 
-.btn.hover {
-  background-color: navy;
-  color: white;
-  transition: 0.5s  ease-in-out;
-  
+.btn:hover {
+  background: -webkit-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -o-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: -moz-linear-gradient(45deg, skyblue, white, lavender)!important;
+  background: linear-gradient(45deg, skyblue, white, lavender)!important;
+  border-radius: 50%;
 }
 
 .btn.active {
-  background-color: skyblue;
-  color: black;
-}
+  background: -webkit-linear-gradient(45deg,blue , whitesmoke, lavender)!important;
+  background: -o-linear-gradient(45deg, blue, whitesmoke, lavender)!important;
+  background: -moz-linear-gradient(45deg, blue, whitesmoke, lavender)!important;
+  background: linear-gradient(45deg, navy, whitesmoke, lavender)!important;
+  color: darkslategrey;
+  border-radius: 50%;
+    }
