--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,65 @@
-@import url(https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap);
-body {
-    color: #000;
-    font-family: "Berkshire+Swash&family" 800, sans-serif;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
- background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background-repeat: repeat!important;
+body
+  {color: #191970;
+  font-family: "Berkshire+Swash&family" 800, sans-serif;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
+  background-repeat: repeat;
   width: auto;
-  position:relative;
+  position: relative;
   box-shadow: 5px 5px 5px rgba(5, 5, 5, 0.5);
 }
 
-
-
 /***************Header Section************/
 
-
-
-  * {box-sizing: border-box;}
-  
-
-
+* {
+  box-sizing: border-box;
+}
 
 /***************Background for header************/
 .header {
   overflow: hidden;
-  background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  ) !important;
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  ) !important;
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  ) !important;
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender) !important;
   opacity: 75%;
-  background-repeat: repeat!important;
+  background-repeat: repeat !important;
   width: auto;
-  position:relative;
+  position: relative;
   box-shadow: 5px 5px 5px rgba(5, 5, 5, 0.5);
   padding-bottom: 30px;
 }
@@ -48,44 +72,81 @@ body {
   padding: 20px;
   text-decoration: none;
   font-size: 30px;
-  line-height:20px;
-}
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  height: 100px;
-  width: 100px;
- padding-bottom: 20px;
+  line-height: 20px;
 }
 
 /* Change the background color on mouse-over */
 .header-right a:hover {
-  background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  color: black;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
+  color: #191970;
   border-radius: 50%;
 }
 
 /* Style the active/current link*/
 .header a.active {
- background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  color: navy;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
+  color: #191970;
   border-radius: 50%;
 }
 
 /* Float the link section to the right */
 .header-right {
   float: right;
-  background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
- 
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@@ -94,98 +155,199 @@ body {
     float: none;
     display: block;
     text-align: left;
-}}
-.logo {
- 
+  }
 }
 
+/***************Footer Section************/
+
+
+footer {
+height:150px;
+ background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
+}
+
+
+
+
+.footer-links {
+  
+  text-align: center;
+}
+
+.footer-links li{
+ display: inline;
+}
+
+.footer-links i {
+   font-size: 400%;
+   font-weight: 500;
+   margin: 1%;
+   padding: 5%;
+   color:#191970;
+
+}
+  
+
+
+
+
+section {
+ background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)
+  }
 
 
 /***************Carousel Section************/
 
 .carousel-container {
-     width: 100%;
-    position:relative; 
-    height: 100%;
+  width: 100%;
+  position: relative;
+  height: 100%;
 }
 
 .carousel-container img {
+  height: 100%;
+}
 
-    height: 100%!important;
-
+.carousel-container::after {
+    clear:both;
 }
 
 /***************About Section************/
 
-  .main {
-      font-family: "Berkshire Swash" , cursive;
-      width: 100%;
-      height: auto;
-
+.main {
+  font-family: "Berkshire Swash", cursive;
+  width: 100%;
+  height: auto;
 }
-div.main { width: 100%}
+div.main {
+  width: 100%;
+}
 
-.btn btn-custom {  background: -webkit-linear-gradient(45deg,blue , whitesmoke, lavender);
+div .jumbotron {
+
+    padding: 0 0 0 0;
+}
+
+.btn btn-custom {
+  background: -webkit-linear-gradient(45deg, blue, whitesmoke, lavender);
   background: -o-linear-gradient(45deg, blue, whitesmoke, lavender);
   background: -moz-linear-gradient(45deg, blue, whitesmoke, lavender);
   background: linear-gradient(45deg, navy, whitesmoke, lavender);
-  color: darkslategrey;
+  color: #191970;
   border-radius: 50%;
-    }
-
-
-
+}
 
 main h1 h2 {
-    font-family: "Berkshire Swash" , cursive;
-    font-size: 60px;
-    text-align: center;
-    background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-}
- 
- .intro {
-
-     font-family: "Berkshire Swash" , cursive;
-     font-weight: 500;
-     font-size: 2.5em;
-    text-align: center;
-     background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-}
-
- img .thumbnail {
-    width: 33%;
-    height: 33%;
-    object-fit: cover;
-    float: left;
-
+  font-family: "Berkshire Swash", cursive;
+  font-size: 60px;
+  text-align: center;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
 }
 
- .column.about img {
+.intro {
+  font-family: "Berkshire Swash", cursive;
+  font-weight: 500;
+  font-size: 2.5em;
+  text-align: center;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
+  width: 100%;
+  height: auto;
+  padding: 0 0 0 0;
 
-    width: 100%;
-     object-fit: cover;
-     height: 300px;
- }
+}
 
+img .thumbnail {
+  width: 33%;
+  height: 33%;
+  object-fit: cover;
+  float: left;
+}
 
-
-
-
+.column.about img {
+  width: 100%;
+  object-fit: cover;
+  height: 300px;
+}
 
 .container-fluid {
+  padding: 0 0 0 0;
+  position: center;
+}
 
-    padding: 0 0 0 0;
-    position: center;
-    }
+/***************Products Section************/
 
-    /***************Products Section************/
-     
 * {
   box-sizing: border-box;
 }
@@ -200,7 +362,6 @@ main h1 h2 {
 h1 {
   font-size: 50px;
   overflow-y: scroll;
-
 }
 
 .row {
@@ -219,15 +380,14 @@ h1 {
   width: 33.33%;
   display: none; /* Hide all elements by default */
 }
-/* fit image to column */ 
+/* fit image to column */
 .column img {
-
-    height: 80%;
-    object-fit: cover;
-    float: left;
+  height: 80%;
+  object-fit: cover;
+  float: left;
 }
 
-/* Clear floats after rows */ 
+/* Clear floats after rows */
 .row:after {
   content: "";
   display: table;
@@ -236,10 +396,25 @@ h1 {
 
 /* Content */
 .content {
-  background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
   padding: 10px;
   height: 100%;
 }
@@ -254,26 +429,66 @@ h1 {
   border: none;
   outline: none;
   padding: 12px 16px;
- background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
   cursor: pointer;
 }
 
 .btn:hover {
- background: -webkit-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, skyblue, whitesmoke, lavender)!important;
+  background: -webkit-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -o-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    skyblue,
+    whitesmoke,
+    lavender
+  );
+  background: linear-gradient(45deg, skyblue, whitesmoke, lavender);
   border-radius: 50%;
 }
 
 .btn.active {
-  background: -webkit-linear-gradient(45deg,blue , whitesmoke, lavender)!important;
-  background: -o-linear-gradient(45deg, blue, whitesmoke, lavender)!important;
-  background: -moz-linear-gradient(45deg, blue, whitesmoke, lavender)!important;
-  background: linear-gradient(45deg, navy, whitesmoke, lavender)!important;
-  color: darkslategrey;
+  background: -webkit-linear-gradient(
+    45deg,
+    blue,
+    whitesmoke,
+    lavender
+  ) !important;
+  background: -o-linear-gradient(45deg, blue, whitesmoke, lavender);
+  background: -moz-linear-gradient(
+    45deg,
+    blue,
+    whitesmoke,
+    lavender
+  ) !important;
+  background: linear-gradient(45deg, navy, whitesmoke, lavender);
+  color: #191970;
   border-radius: 50%;
-    }
+}
